make it compatible with the efd cahnge ( influx_client ==> _influx_client ) and the use of today instaed of Now

--- a/operations/FES/CarouselError_sticky.ipynb
+++ b/operations/FES/CarouselError_sticky.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "# configuration parameters for Carousel controler error check \n",
-    "last_data_date = 'Now'\n",
+    "last_data_date =datetime.date.fromisoformat(datetime.datetime.now(datetime.UTC).strftime('%Y-%m-%d'))\n",
     "duration_in_day = 1"
    ]
   },
@@ -68,10 +68,7 @@
     }
    ],
    "source": [
-    "if last_data_date == 'Now':\n",
-    "    last_data_date_val = datetime.datetime.now(datetime.UTC)\n",
-    "else:\n",
-    "    last_data_date_val = datetime.datetime.fromisoformat(last_data_date+'T14:00:00+00:00')\n",
+    "last_data_date_val = datetime.datetime.fromisoformat(last_data_date+'T14:00:00+00:00')\n",
     "first_data_date_val = last_data_date_val - datetime.timedelta(days=duration_in_day)\n",
     "#\n",
     "tstart=first_data_date_val.isoformat()\n",
@@ -144,7 +141,7 @@
     "    if verbose : \n",
     "        print(\"Running the query \")\n",
     "        print(query)\n",
-    "    db_in =  await client.influx_client.query(query)\n",
+    "    db_in =  await client._influx_client.query(query)\n",
     "    for col in db_in.columns :\n",
     "        len_col=len(db_in[db_in[col].notnull()])\n",
     "        if clean :\n",
