--- a/operations/FES/CarouselMonitor_lock.ipynb
+++ b/operations/FES/CarouselMonitor_lock.ipynb
@@ -201,7 +201,7 @@
    "source": [
     "async def read_db(query,verbose=False,clean=True) :\n",
     "    if verbose : print(query)\n",
-    "    db_in =  await client.influx_client.query(query)\n",
+    "    db_in =  await client._influx_client.query(query)\n",
     "    if len(db_in)==0 : return db_in\n",
     "    for col in db_in.columns :\n",
     "        len_col=len(db_in[db_in[col].notnull()])\n",
