--- a/operations/FES/CarouselMonitor_unlock.ipynb
+++ b/operations/FES/CarouselMonitor_unlock.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "# configuration parameters for Times square\n",
-    "last_data_date = 'Now'\n",
+    "last_data_date =datetime.date.fromisoformat(datetime.datetime.now(datetime.UTC).strftime('%Y-%m-%d'))\n",
     "duration_in_day = 1\n",
     "OverViewOnly = True\n",
     "PlotDiagnostic= True "
@@ -41,10 +41,7 @@
    "outputs": [],
    "source": [
     "# initialisation from \n",
-    "if last_data_date == 'Now':\n",
-    "    last_data_date_val = datetime.datetime.now(datetime.UTC)\n",
-    "else:\n",
-    "    last_data_date_val = datetime.datetime.fromisoformat(last_data_date+'T14:00:00+00:00')\n",
+    "last_data_date_val = datetime.datetime.fromisoformat(last_data_date+'T14:00:00+00:00')\n",
     "first_data_date_val = last_data_date_val - datetime.timedelta(days=duration_in_day)\n",
     "#\n",
     "tstart=first_data_date_val.isoformat()\n",
@@ -112,7 +109,7 @@
    "source": [
     "async def read_db(query,verbose=False,clean=True) :\n",
     "    if verbose : print(query)\n",
-    "    db_in =  await client.influx_client.query(query)\n",
+    "    db_in =  await client._influx_client.query(query)\n",
     "    for col in db_in.columns :\n",
     "        len_col=len(db_in[db_in[col].notnull()])\n",
     "        if clean :\n",
