add the data time import

--- a/operations/FES/CarouselMonitor_unlock.ipynb
+++ b/operations/FES/CarouselMonitor_unlock.ipynb
@@ -8,6 +8,7 @@
    "outputs": [],
    "source": [
     "# configuration parameters for Times square\n",
+    "import datetime \n",
     "last_data_date =datetime.date.fromisoformat(datetime.datetime.now(datetime.UTC).strftime('%Y-%m-%d'))\n",
     "duration_in_day = 1\n",
     "OverViewOnly = True\n",
