--- a/operations/FES/CarouselError_sticky.ipynb
+++ b/operations/FES/CarouselError_sticky.ipynb
@@ -16,6 +16,7 @@
    "outputs": [],
    "source": [
     "# configuration parameters for Carousel controler error check \n",
+    "import datetime \n",
     "last_data_date =datetime.date.fromisoformat(datetime.datetime.now(datetime.UTC).strftime('%Y-%m-%d'))\n",
     "duration_in_day = 1"
    ]
