fix issue in date format

--- a/operations/FES/CarouselError_sticky.ipynb
+++ b/operations/FES/CarouselError_sticky.ipynb
@@ -69,7 +69,7 @@
     }
    ],
    "source": [
-    "last_data_date_val = datetime.datetime.fromisoformat(last_data_date+'T14:00:00+00:00')\n",
+    "last_data_date_val = datetime.datetime.fromisoformat(last_data_date.isoformat()+'T14:00:00+00:00')\n",
     "first_data_date_val = last_data_date_val - datetime.timedelta(days=duration_in_day)\n",
     "#\n",
     "tstart=first_data_date_val.isoformat()\n",
