add time interval parameter

--- a/operations/vacuum.ipynb
+++ b/operations/vacuum.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4a7d239a",
    "metadata": {},
    "outputs": [],
    "source": [
     "t_end = 'Now'\n",
-    "duration_in_day = 5"
+    "duration_in_day = 5\n",
+    "time_interval = '1m'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5985d4a9",
    "metadata": {},
    "outputs": [
@@ -52,7 +53,7 @@
     "    \"CIP5\": -0.006450745794508193,\n",
     "    \"CIP6\": 0.009414226920516402\n",
     "}\n",
-    "BIN_INFLUX = \"1m\"\n",
+    "BIN_INFLUX = time_interval\n",
     "BIN_PANDAS = \"1min\"\n",
     "CRYOVAC_TORR_TO_MBAR = 1.3333\n",
     "CURRENT_MA_TO_A = 1e-3\n",
