--- a/FES/SetFilterMonitor_time.ipynb
+++ b/FES/SetFilterMonitor_time.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "51bb739a-5f87-40b2-bd3c-8ee6752bbd30",
    "metadata": {},
    "outputs": [],
@@ -18,10 +18,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ab6abd68-72fa-498b-9d37-89f8e34d0038",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:numexpr.utils:Note: detected 128 virtual cores but NumExpr set to maximum of 64, check \"NUMEXPR_MAX_THREADS\" environment variable.\n",
+      "INFO:numexpr.utils:Note: NumExpr detected 128 cores but \"NUMEXPR_MAX_THREADS\" not set, so enforcing safe limit of 16.\n",
+      "INFO:numexpr.utils:NumExpr defaulting to 16 threads.\n"
+     ]
+    }
+   ],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "\n",
@@ -37,10 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "04aeeaa8-5d9b-42f9-856d-cba5992316b4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we will analyse data between  2026-02-27T14:00:00+00:00  and  2026-02-28T14:00:00+00:00  using FES configuration at  2026-02-27 14:00:00\n"
+     ]
+    }
+   ],
    "source": [
     "# initialisation from \n",
     "last_data_date_val = datetime.datetime.fromisoformat(last_data_date.isoformat()+'T14:00:00+00:00')\n",
@@ -79,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d855007f-798a-4a90-b9ea-c398a6cbbfe3",
    "metadata": {},
    "outputs": [],
@@ -104,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1c8a9f8f-8b21-4246-9fa6-738719a81ff2",
    "metadata": {},
    "outputs": [],
@@ -128,10 +146,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c4ff64cb-c444-4ee8-971f-69c1db3f20d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'EfdClient' object has no attribute '_influx_client'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m query = \u001b[33m'''\u001b[39m\u001b[33mSELECT \u001b[39m\u001b[33m\"\u001b[39m\u001b[33mmainDoorOpeningPercentage\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m FROM \u001b[39m\u001b[33m\"\u001b[39m\u001b[33mefd\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m.\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mautogen\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m.\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mlsst.sal.ATDome.position\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m WHERE  time > \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m AND time < \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m \u001b[39m\u001b[33m'''\u001b[39m % (tstart,tend)\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m dome  =  \u001b[38;5;28;01mawait\u001b[39;00m read_db(query,clean=\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m#\u001b[39;00m\n\u001b[32m      4\u001b[39m query = \u001b[33m'''\u001b[39m\u001b[33mSELECT * FROM \u001b[39m\u001b[33m\"\u001b[39m\u001b[33mlsst.MTCamera\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m.\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mautogen\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m.\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mlsst.MTCamera.fcs_duration_carousel_clamps\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m WHERE  time > \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m AND time < \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m AND \u001b[39m\u001b[33m\"\u001b[39m\u001b[33mAgent\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m=\u001b[39m\u001b[33m'\u001b[39m\u001b[33mfcs\u001b[39m\u001b[33m'\u001b[39m\u001b[33m AND \u001b[39m\u001b[33m\"\u001b[39m\u001b[33mHardware\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m=\u001b[39m\u001b[33m'\u001b[39m\u001b[33mcarousel\u001b[39m\u001b[33m'\u001b[39m\u001b[33m \u001b[39m\u001b[33m'''\u001b[39m % (tstart,tend)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 3\u001b[39m, in \u001b[36mread_db\u001b[39m\u001b[34m(query, verbose, clean)\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mread_db\u001b[39m(query,verbose=\u001b[38;5;28;01mFalse\u001b[39;00m,clean=\u001b[38;5;28;01mTrue\u001b[39;00m) :\n\u001b[32m      2\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m verbose : \u001b[38;5;28mprint\u001b[39m(query)\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m     db_in =  \u001b[38;5;28;01mawait\u001b[39;00m \u001b[43mclient\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_influx_client\u001b[49m.query(query)\n\u001b[32m      4\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m col \u001b[38;5;129;01min\u001b[39;00m db_in.columns :\n\u001b[32m      5\u001b[39m         len_col=\u001b[38;5;28mlen\u001b[39m(db_in[db_in[col].notnull()])\n",
+      "\u001b[31mAttributeError\u001b[39m: 'EfdClient' object has no attribute '_influx_client'"
+     ]
+    }
+   ],
    "source": [
     "query = '''SELECT \"mainDoorOpeningPercentage\" FROM \"efd\".\"autogen\".\"lsst.sal.ATDome.position\" WHERE  time > '%s' AND time < '%s' ''' % (tstart,tend)\n",
     "dome  =  await read_db(query,clean=False)\n",
@@ -504,9 +535,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "LSST",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "lsst"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -518,7 +549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
