--- a/operations/vacuum.ipynb
+++ b/operations/vacuum.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4a7d239a",
    "metadata": {},
    "outputs": [],
@@ -12,11 +12,7 @@
     "duration_in_day = 330\n",
     "time_interval = '2h'\n",
     "a =  1.06823544\n",
-    "b = -5.42086628\n",
-    "vacmin = 7e-9\n",
-    "vacmax = 3e-7\n",
-    "curmin = 3e-3\n",
-    "curmax = 1e-1"
+    "b = -5.42086628\n"
    ]
   },
   {
@@ -47,11 +43,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "de7a0560",
    "metadata": {},
    "outputs": [],
    "source": [
+    "vacmin = 7e-9\n",
+    "vacmax = 3e-7\n",
+    "curmin = 3e-3\n",
+    "curmax = 1e-1\n",
+    "\n",
     "OFFSETCRYO = {\n",
     "    \"CIP1\": -0.003171139293246799,\n",
     "    \"CIP2\": -0.00802408324347602,\n",
